заполнил формами модальное окно

--- a/portofolio.html
+++ b/portofolio.html
@@ -293,6 +293,18 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscript">
+          <h2 class="title-subscript">Подпишитесь на рассылку</h2>
+          <form class="subscript-form">
+            <input class="subscript-input" type="email" name="email" placeholder="E-mail" />
+            <button class="hero-button footer-btn" type="submit">
+              Подписаться
+              <svg class="btn-icon">
+                <use href="./images/symbol-defs.svg#plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
