--- a/index.html
+++ b/index.html
@@ -67,6 +67,47 @@
               <use href="./images/symbol-defs.svg#close"></use>
             </svg>
           </button>
+          <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+          <form class="modal-form">
+            <label class="modal-label">
+              <span class="modal-txt">Имя</span>
+              <input class="modal-input" type="text" />
+              <svg class="input-icon">
+                <use href="./images/symbol-defs.svg#man"></use>
+              </svg>
+            </label>
+            <label class="modal-label">
+              <span class="modal-txt">Телефон</span>
+              <input class="modal-input" type="tel" />
+              <svg class="input-icon">
+                <use href="./images/symbol-defs.svg#tell"></use>
+              </svg>
+            </label>
+            <label class="modal-label">
+              <span class="modal-txt">Почта</span>
+              <input class="modal-input" type="email" />
+              <svg class="input-icon">
+                <use href="./images/symbol-defs.svg#letter-bg"></use>
+              </svg>
+            </label>
+            <label class="modal-label">
+              <span class="modal-txt">Комментарий</span>
+              <textarea
+                class="modal-input modal-feedback"
+                name="feedback"
+                cols="30"
+                rows="10"
+                placeholder="Введите текст"
+              ></textarea>
+            </label>
+            <label class="modal-checkbox">
+              <input class="checkbox visually-hidden" type="checkbox" />
+              <span class="checkbox-icon"></span>
+              <span class="checkbox-txt">Соглашаюсь с рассылкой и принимаю</span>
+            </label>
+            <a class="checkbox-link" href="">Условия договора</a>
+          </form>
+          <button class="submit-btn hero-button" type="submit">Отправить</button>
         </div>
       </div>
       <!--Приемущества-->
@@ -421,6 +462,18 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-subscript">
+          <h2 class="title-subscript">Подпишитесь на рассылку</h2>
+          <form class="subscript-form">
+            <input class="subscript-input" type="email" name="email" placeholder="E-mail" />
+            <button class="hero-button footer-btn" type="submit">
+              Подписаться
+              <svg class="btn-icon">
+                <use href="./images/symbol-defs.svg#plane"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
