--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
             <label class="modal-checkbox">
               <input class="checkbox visually-hidden" type="checkbox" />
               <span class="checkbox-icon"></span>
-              <span class="checkbox-txt">Соглашаюсь с рассылкой и принимаю</span>
+              <span class="checkbox-txt"
+                >Соглашаюсь с рассылкой и принимаю
+                <a class="checkbox-link" href="">Условия договора</a>
+              </span>
             </label>
-            <a class="checkbox-link" href="">Условия договора</a>
           </form>
           <button class="submit-btn hero-button" type="submit">Отправить</button>
         </div>
