изменил структуру разметки благодаря gap

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <ul class="team list">
             <li class="team-list">
               <img src="./images/demianenko.jpg" alt="Игорь Демьяненко" width="270" />
-              <div class="item">
+              <div class="team-box">
                 <h3 class="section-title">Игорь Демьяненко</h3>
                 <p lang="en" class="text">Product Designer</p>
 
@@ -247,7 +247,7 @@
             </li>
             <li class="team-list">
               <img src="./images/repina.jpg" alt="Ольга Репина" width="270" />
-              <div class="item">
+              <div class="team-box">
                 <h3 class="section-title">Ольга Репина</h3>
                 <p lang="en" class="text">Frontend Developer</p>
                 <ul class="social-list list">
@@ -284,7 +284,7 @@
             </li>
             <li class="team-list">
               <img src="./images/tarasov.jpg" alt="Николай Тарасов" width="270" />
-              <div class="item">
+              <div class="team-box">
                 <h3 class="section-title">Николай Тарасов</h3>
                 <p lang="en" class="text">Marketing</p>
 
@@ -322,7 +322,7 @@
             </li>
             <li class="team-list">
               <img src="./images/ermakov.jpg" alt="" width="270" />
-              <div class="item">
+              <div class="team-box">
                 <h3 class="section-title">Михаил Ермаков</h3>
                 <p lang="en" class="text">UI Designer</p>
                 <ul class="social-list list">
